# Cthulhu-Roller

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  install-service.sh  rustfmt.toml
ci/: build  check  test
scripts/: build  cargo-sort  check  clippy  format  install-service.sh  test  udeps
src/: autocomplete.rs  bot_data.rs  character.rs  command_list.rs  help_messages.rs  locale.rs  main.rs  message.rs  roll.rs  types.rs  utils.rs
src/character/: attributes.rs  item.rs  mod.rs  skill.rs  weapon.rs
src/commands/: basic.rs  mod.rs
src/commands/autocomplete/: character.rs  mod.rs
src/commands/character/: attribute.rs  character_cmd.rs  fight.rs  interaction.rs  item.rs  item_mod.rs  mod.rs  skill.rs  skills.rs  stats.rs  weapon.rs
src/commands/character/skill/: add.rs  mod.rs  skill_impl.rs
src/commands/gm/: character.rs  characters.rs  db.rs  gmcharacter.rs  item.rs  mod.rs  weapon.rs
src/message/: mod.rs
src/message/formatter/: character.rs  mod.rs
src/roller/: attribute_roll.rs  battle.rs  croll.rs  dice_rng.rs  improve_roll.rs  mod.rs  modifier_dice.rs  roll.rs  success_level.rs
