[package]
name = "cthulhu-roller"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.97"
poise = "0.6.1"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
tabled = "0.20.0"
tokio = "1.44.2"
tracing = "0.1.41"
