[package]
name = "cthulhu-roller"
version = "0.4.0"
edition = "2024"
publish = false

[features]
default = ["character-sheet"]
character-sheet = []

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
itertools = "0.14.0"
lazy_static = "1.5.0"
poise = "0.6.1"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tabled = "0.20.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.26.1"
